# zero2prod

./: Cargo.toml  Dockerfile  init_db.ps1  init_db.sh  spec.yaml  sqlx-data.json
.cargo/: Config.toml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20230501160225_create_subscription_table.sql
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
